Text-fixes: Arreglos en experiencia de usuario, visibilidad y accesibilidad

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,8 +12,8 @@
   outline: none;
 }
 
-a:visited {
-  color: inherit;
+a:visited, a:link {
+  color:#161616;
 }
 
 .oculto {
@@ -29,6 +29,7 @@ a:visited {
 
 body, html {
   overflow: hidden;
+  background: hsla(0,0%,90%,1);
 }
 
 header {
@@ -67,10 +68,10 @@ header span {
 }
 
 #izquierda, #derecha {
-  background-color: rgba(140, 140, 140, 0.08);
+  background-color: rgba(140, 140, 190, 0.1);
   border-radius: 10px;
-  -webkit-backdrop-filter: blur(2px);
-  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24), 0 1px 3px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -96,9 +97,12 @@ textarea {
   letter-spacing: 2px;
   padding: 3%;
   font-weight: bolder;
-  text-transform: lowercase;
 }
 
+
+.izquierda-contenido p {
+  margin-left: 2%;
+}
 
 .mainbttns {
   display: flex;
@@ -208,8 +212,8 @@ button:hover {
   letter-spacing: 2px;
   background-color: rgba(290, 290, 290, 0.29);
   border-radius: 20px;
-  -webkit-backdrop-filter: blur(2px);
-  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
   padding: 2%;
 }
 
@@ -304,6 +308,7 @@ button:hover {
 }
 
 .toast {
+  display: none;
   position: absolute;
   top: 3%;
   right: 2%;
@@ -319,6 +324,7 @@ button:hover {
 }
 
 .toast.active {
+  display: block;
   transform: translateX(0%);
 }
 
@@ -494,6 +500,14 @@ button:hover {
     height: 60%;
   }
   
+  textarea {
+    text-transform: lowercase;
+  }
+  
+  .izquierda-contenido p {
+    display: none;
+  }
+  
   #derecha {
     flex-direction: row;
     gap: 0;
@@ -587,7 +601,7 @@ button:hover {
   }
   
   .line {
-    width: 4.5rem;
+    width: 3rem;
     transform: scaleX(1);
     margin: 0 0.9rem;;
   }
@@ -607,5 +621,97 @@ button:hover {
   
   .nav-link {
     font-size: 1.6rem;
+  }
+}
+
+@media screen and (max-width: 515px) {
+  #canv {
+    opacity: 0.3;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  
+  header {
+    top: 4%;
+  }
+  
+  #contenedor {
+    width: 90%;
+    gap: 5%;
+  }
+  
+  #izquierda {
+    height: 50%;
+  }
+  
+  .izquierda-contenido {
+    padding: 0;
+    gap: 1%;
+  }
+  
+  textarea {
+    height: 85%;
+  }
+  
+  button {
+    font-size: 0.6em;
+  }
+  
+  #derecha {
+  align-items: center;
+    height: 50%;
+  }
+  
+  .vectorCat {
+    width: 70%;
+  }
+  
+  .resultadoOculto {
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .resultado {
+    width: 100%;
+  }
+  
+  .sm-header {
+    font-size: 1rem;
+  }
+  
+  .nav-item {
+    margin-inline: 0.5rem;
+  }
+  
+  .nav-link {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-height: 300px) {
+  #contenedor {
+    width: 80%;
+    gap: 40%;
+  }
+  
+  #izquierda {
+    height: 70%;
+  }
+  
+  #derecha {
+    height: 20%;
+  }
+  .izquierda-contenido {
+    gap: 0;
+  }
+  
+  .mainbttns {
+    padding-bottom: 10px;
+  }
+  
+  textarea {
+    height: 30%;
   }
 }
